# Spiltixal

./: .gitignore  Cargo.toml  LICENSE  README.md
Spiltixal.AppDir/: .DirIcon  AppRun  spiltixal.desktop
src/: main.rs
